--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+Ignore the def config
+/config/dev.exs
+
 # Ignore the JetBrains directory
 /.idea
 
