--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-Ignore the def config
+Ignore the dev config
 /config/dev.exs
 
 # Ignore the JetBrains directory
