--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ language: elixir
 elixir:
   - 1.3
   - 1.4
+  - 1.5
 
 otp_release:
   - 19.0
   - 20.0
 
 env:
-  - ARANGODB_VERSION=3.1 ARANGO_VERSION=30100
-  - ARANGODB_VERSION=devel ARANGO_VERSION=30200
+  - ARANGODB_VERSION=3.2 ARANGO_VERSION=30200
 
 before_install:
   - curl https://www.arangodb.com/repositories/travisCI/setup_arangodb_${ARANGODB_VERSION}.sh | bash
 
 script:
-  - MIX_ENV=test mix credo --strict
+  - MIX_ENV=test mix credo
   - mix test
 
 after_script:
