--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-group: deprecated-2017Q3
-
 language: elixir
 
 elixir:
@@ -14,7 +12,7 @@ env:
   - ARANGODB_VERSION=3.2 ARANGO_VERSION=30200
 
 before_install:
-  - curl https://www.arangodb.com/repositories/travisCI/setup_arangodb_${ARANGODB_VERSION}.sh | bash
+  - curl https://download.arangodb.com/travisCI/setup_arangodb_${ARANGODB_VERSION}.sh | bash
 
 script:
   - MIX_ENV=test mix credo
